# mpris_train

./: Cargo.toml  test.txt
src/: main.rs
