[package]
name = "zbus_mpris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
once_cell = "1.17.1"
serde = { version = "1.0.181", features = ["derive"] }

tokio = { version = "1.28.1", features = ["full"] }
zbus = { version = "3.12.0", default-features = false, features = ["tokio"] }
