[package]
name = "zbus_mpris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
once_cell = "1.18.0"
serde = { version = "1.0.181", features = ["derive"] }

tokio = { version = "1.29.1", features = ["full"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
