[package]
name = "zbus_mpris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }

tokio = { version = "1.39.3", features = ["full"] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
